# dg-metadata-manager

./: .gitignore  MANIFEST.in  README.md  README_ja.md  application.py  manager.py  pyproject.toml  requirements.txt  www.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: unit_test.yml
api/app_logging/: log.py
api/controllers/: index.py  user_route.py
api/enums/: log_level.py
api/models/: user.py
api/utils/app_logging/: log.py
api/utils/print_util/: print_log.py
config/: base_setting.py  local_setting.py  logging_config.py
dg_mm/: __init__.py  __main__.py  errors.py  exceptions.py  util.py
dg_mm/data/mapping/: GRDM_RF_mapping.json
dg_mm/data/storage/: grdm.ini
dg_mm/error/: __init__.py  error.py
dg_mm/models/: base.py  grdm.py  mapping_definition.py  metadata_manager.py
dg_mm/packaging/: __init__.py  entity_info.py  packager.py
docker/: Dockerfile
tests/: conftest.py  test___main__.py  test_util.py
tests/models/: conftest.py  test_base.py  test_grdm.py  test_mapping_definition.py  test_metadata_manager.py
tests/models/data/: expected_schema.json  grdm_api_contributors_1.json  grdm_api_contributors_2.json  grdm_api_contributors_3.json  grdm_api_contributors_4.json  grdm_api_file_metadata.json  grdm_api_file_metadata_2.json  grdm_api_file_metadata_3.json  grdm_api_node_1.json  grdm_api_profile_1.json  grdm_api_profile_2.json  grdm_api_registrations_1.json  grdm_api_registrations_2.json  grdm_api_registrations_3.json  grdm_api_registrations_4.json  (+10 more)
tests/packaging/: __init__.py  test_entity_info.py  test_packager.py
